<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="160sp"
                android:layout_height="80sp"
                android:src="@drawable/diamondhacks" />

            <TextView
                style="@style/OpportunityTitleTheme"
                android:textSize="20sp"
                android:text="@string/diamond_hacks"
                android:layout_gravity="center"/>
        </LinearLayout>

        <TextView
            style="@style/DetailsTheme"
            android:text="@string/diamond_date" />

        <TextView
            style="@style/DetailsTheme"
            android:text="@string/diamond_venue" />

        <TextView
            style="@style/OpportunityInfoTheme"
            android:textSize="16sp"
            android:text="@string/diamond_desc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DeadlineTheme"
                android:text="@string/what_bring"
                android:layout_width="110dp"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left">

                <TextView
                    style="@style/ListTheme"
                    android:text="@string/id"/>

                <TextView
                    style="@style/ListTheme"
                    android:text="@string/laptop"/>

                <TextView
                    style="@style/ListTheme"
                    android:text="@string/phone"/>

                <TextView
                    style="@style/ListTheme"
                    android:text="@string/clothes"/>

                <TextView
                    style="@style/ListTheme"
                    android:text="@string/toiletries"/>

                <TextView
                    style="@style/ListTheme"
                    android:text="@string/sleeping_bag"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <Button
                style="@style/ActionButtonTheme"
                android:text="@string/more_info"
                android:onClick="openDiamondWeb"/>

            <Button
                style="@style/ActionButtonTheme"
                android:text="@string/register"
                android:onClick="openDiamondApp"/>

            <Button
                style="@style/ActionButtonTheme"
                android:text="@string/next"
                android:onClick="setLayoutCode2040"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
