<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="160sp"
                android:layout_height="80sp"
                android:src="@drawable/code2040" />

            <TextView
                style="@style/OpportunityTitleTheme"
                android:text="@string/code2040" />
        </LinearLayout>

        <TextView
            style="@style/DeadlineTheme"
            android:text="@string/app_closed" />

        <TextView
            style="@style/OpportunityInfoTheme"
            android:text="@string/code2040_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <Button
                style="@style/ActionButtonTheme"
                android:onClick="openCode2040Web"
                android:text="@string/more_info" />

            <Button
                style="@style/ActionButtonTheme"
                android:onClick="setLayoutDS3"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
