<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juleengraham.techdiversityv1.MainActivity">

    <TextView
        style="@style/OpportunityTitleTheme"
        android:textSize="28sp"
        android:text="@string/subtitle"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">

        <View
            android:layout_width="10sp"
            android:layout_height="80sp"
            android:background="@color/colorScheme1"></View>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:src="@drawable/tapia"
            android:onClick="setLayoutTapia"/>

        <TextView
            style="@style/OpportunityTitle2Theme"
            android:text="@string/tapia_conference_shortened" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <TextView
            style="@style/OpportunityTitle2Theme"
            android:text="@string/diamond_hacks" />

        <ImageView
            android:layout_width="90sp"
            android:layout_height="80sp"
            android:src="@drawable/diamondhacks"
            android:onClick="setLayoutDiamondHacks"/>

        <View
            android:layout_width="10sp"
            android:layout_height="80sp"
            android:background="@color/colorScheme2"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">

        <View
            android:layout_width="10sp"
            android:layout_height="80sp"
            android:background="@color/colorScheme1"></View>

        <ImageView
            android:layout_width="160sp"
            android:layout_height="80sp"
            android:src="@drawable/code2040"
            android:onClick="setLayoutCode2040"/>

        <TextView
            style="@style/OpportunityTitle2Theme"
            android:text="@string/code2040"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <TextView
            style="@style/OpportunityTitle2Theme"
            android:text="@string/microsoft_ds3_shortened" />

        <ImageView
            android:layout_width="120sp"
            android:layout_height="80sp"
            android:src="@drawable/microsoft2"
            android:onClick="setLayoutDS3"/>

        <View
            android:layout_width="10sp"
            android:layout_height="80sp"
            android:background="@color/colorScheme2"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">

        <View
            android:layout_width="10sp"
            android:layout_height="80sp"
            android:background="@color/colorScheme1"></View>

        <ImageView
            android:layout_width="100sp"
            android:layout_height="80sp"
            android:src="@drawable/buildium_logo"
            android:onClick="setLayoutBuildiumScholarship"/>

        <TextView
            style="@style/OpportunityTitle2Theme"
            android:text="@string/buildium_scholarship_shortened" />
    </LinearLayout>
</LinearLayout>
